<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/darkgray"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/longclickdialog_fragment_title"
        android:layout_width="fill_parent"
        android:layout_height="58dp"
        android:background="@color/red1"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/exercisetype"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/longclickdialog_modify"
        android:layout_width="fill_parent"
        android:layout_height="54dp"
        android:background="@drawable/list_alertdialog"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/edit"
        android:textColor="@color/lightgray1"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/darkgray3" />

    <TextView
        android:id="@+id/longclickdialog_delete"
        android:layout_width="fill_parent"
        android:layout_height="54dp"
        android:background="@drawable/list_alertdialog"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/delete"
        android:textColor="@color/lightgray1"
        android:textSize="18sp" />
</LinearLayout>